# stockrs

./: Cargo.toml  README  README.md
docs/: api.md
src/: app.rs  http_req.rs  lib.rs  main.rs
src/api/: mod.rs  quote.rs
